2004-08-06  Christian Kellner  <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-resolve.c (gnome_vfs_resolve_next_address):
	Small cleanup.
	* libgnomevfs/gnome-vfs-address.c: Added brackets around macros. Fixed
	wrong argument check. Patch from desrt@desrt.ca. Fixes bug #149242.

2004-08-04  Christian Kellner  <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-ssl.c: Changed #if to #ifdef. This should
	fix bug #149205.
	* modules/sftp-method.c: Use memset instead of bzero, fixes #149206.
	
2004-08-04  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* libgnomevfs/gnome-vfs-dns-sd.h: Remove a trailing comma from
	an enum (bug #149052).

=== gnome-vfs 2.7.90 ===

2004-07-31  Christophe Fergeau  <teuf@gnome.org>

	* configure.in
	* NEWS: version 2.7.90

2004-07-31  Christophe Fergeau  <teuf@gnome.org>

	* modules/ftp-method.c: added explicit cast to struct sockaddr in the
	  hope that it will fix part of bug #147887.

2004-07-31  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: support ssh.com ssh server, patch from 
	  William Jon McCann <mccann@jhu.edu>, fixes #147444

2004-07-31  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/Makefile.am: removed -export-symbols-regex since it 
	  doesn't seem to make a difference on linux anyway, and it breaks
	  compilation on Solaris.

2004-07-30  Christian Kellner <gicmo@gnome-de.org>
	
	* configure.in: Added checks for res_ninit and rearranged the
	resolver checks.
	* libgnomevfs/gnome-vfs-resolve.c: Added support for resolver
	reloads and fixed a memory leak. The reload support is partially
	based on a patch from Christophe Fergeau <teuf@gnome.org>. Fixes 
	#76283
 	
2004-07-31  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: (do_create): use memset instead of bzero

2004-07-31 Torsten Schoenfeld  <kaffeetisch@gmx.de> 

	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-dns-sd.c:
	(gnome_vfs_dns_sd_service_status_get_type):
	* libgnomevfs/gnome-vfs-dns-sd.h: